<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Controle Processos Legais</string>
    <string name="menu_settings">Configurações</string>
    <string name="title_activity_cadastro_cliente">CadastroClienteActivity</string>
    <string name="nome">Nome</string>
    <string name="nome_completo">Nome Completo</string>
    <string name="rg">RG</string>
    <string name="cpf">CPF</string>
    <string name="cpf_cnpj">CPF/CNPJ</string>
    <string name="orgao_expedidor">Órgão Expedidor</string>
    <string name="endereco_completo">Endereço</string>
    <string name="rua">Rua</string>
    <string name="numero">Nº</string>
    <string name="cep">CEP</string>
    <string name="bairro">Bairro</string>
    <string name="estados">Estados</string>
    <string name="nacionalidade">Nacionalidade</string>
    <string name="estado_civil">Estado Cívil</string>
    <string name="profissao">Profissão</string>
    <string name="cnpg">CNPG</string>
    <string name="nome_dos_pais">Nome dos Pais</string>
    <string name="mae">Mãe</string>
    <string name="pai">Pai</string>
    <string name="ctps">CTPS</string>
    <string name="pis_pasep">PIS/PASEP</string>
    <string name="inscricao_estadual">Inscrição Estadual</string>
    <string name="salvar">Salvar</string>
    <string name="mais">+</string>
    <string name="cancelar">Cancelar</string>
     <string name="excluir">Excluir</string>
    <string name="editar">Editar</string>
    <string name="title_activity_listagem_cliente">ListagemClienteActivity</string>
    <string name="sem_selecao">Sem Seleção</string>
    <string name="excluir_message">Deseja excluir cliente de nome:</string>
    <string name="title_activity_visualizar_cliente">VisualizarClienteActivity</string>
   

</resources>