<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+idIncluir/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="0px"
        android:layout_weight="6" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <View
                android:id="@+idIncluir/barra1"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:background="#FF3300" >
            </View>

            <EditText
                android:id="@+idIncluir/nomeEditView"
                android:layout_width="wrap_content"
                android:layout_height="40sp"
                android:layout_below="@+idIncluir/barra1"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_marginTop="3sp"
                android:height="10sp"
                android:hint="@string/nome_completo"
                android:inputType="textPersonName"
                android:textSize="13sp"
                android:width="300sp" />

            <EditText
                android:id="@+idIncluir/rgEditView"
                android:layout_width="wrap_content"
                android:layout_height="40sp"
                android:layout_below="@+idIncluir/nomeEditView"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_marginTop="3sp"
                android:hint="@string/rg"
                android:textSize="13sp"
                android:width="150sp" />

            <EditText
                android:id="@+idIncluir/orgaoExpedidorEditView"
                android:layout_width="wrap_content"
                android:layout_height="40sp"
                android:layout_below="@+idIncluir/nomeEditView"
                android:layout_marginLeft="4sp"
                android:layout_marginRight="10sp"
                android:layout_marginTop="3sp"
                android:layout_toRightOf="@+idIncluir/rgEditView"
                android:hint="@string/orgao_expedidor"
                android:inputType="number"
                android:textSize="13sp"
                android:width="150sp" />

            <EditText
                android:id="@+idIncluir/cpfcnpjEditView"
                android:layout_width="wrap_content"
                android:layout_height="40sp"
                android:layout_below="@+idIncluir/orgaoExpedidorEditView"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_marginTop="3sp"
                android:hint="@string/cpf_cnpj"
                android:inputType="number"
                android:textSize="13sp"
                android:width="300sp" />

            <View
                android:id="@+idIncluir/barra2"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_below="@+idIncluir/cpfcnpjEditView"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:background="#FF3300" >
            </View>

            <TextView
                android:id="@+idIncluir/enderecoTextView"
                android:layout_width="wrap_content"
                android:layout_height="25sp"
                android:layout_below="@+idIncluir/barra2"
                android:layout_marginLeft="15sp"
                android:text="@string/endereco_completo"
                android:textSize="18sp"
                tools:context=".CadastroClienteActivity" />

            <View
                android:id="@+idIncluir/barra3"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_below="@+idIncluir/enderecoTextView"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:background="#FF3300" >
            </View>

            <EditText
                android:id="@+idIncluir/ruaEditView"
                android:layout_width="wrap_content"
                android:layout_height="40sp"
                android:layout_below="@+idIncluir/barra3"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_marginTop="3sp"
                android:hint="@+string/rua"
                android:inputType="number"
                android:textSize="13sp"
                android:width="300sp" />

            <EditText
                android:id="@+idIncluir/numeroEditView"
                android:layout_width="wrap_content"
                android:layout_height="40sp"
                android:layout_below="@+idIncluir/ruaEditView"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_marginTop="3sp"
                android:hint="@+string/numero"
                android:inputType="number"
                android:textSize="13sp"
                android:width="100sp" />

            <EditText
                android:id="@+idIncluir/bairroEditView"
                android:layout_width="wrap_content"
                android:layout_height="40sp"
                android:layout_below="@+idIncluir/ruaEditView"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_marginTop="3sp"
                android:layout_toRightOf="@+idIncluir/numeroEditView"
                android:hint="@+string/bairro"
                android:inputType="number"
                android:textSize="13sp"
                android:width="200sp" />

            <Spinner
                android:id="@+idIncluir/estadoSpinnerView"
                android:layout_width="wrap_content"
                android:layout_height="40sp"
                android:layout_below="@+idIncluir/bairroEditView"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_marginTop="3sp"
                android:drawSelectorOnTop="true"
                android:entries="@+array/estados_array"
                android:prompt="@+string/estados"
                android:tag="@+tags/estado_tag"
                android:textSize="13sp"
                android:width="100sp" />

            <EditText
                android:id="@+idIncluir/cepEditView"
                android:layout_width="wrap_content"
                android:layout_height="40sp"
                android:layout_below="@+idIncluir/bairroEditView"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_marginTop="3sp"
                android:layout_toRightOf="@+idIncluir/estadoSpinnerView"
                android:inputType="number"
                android:textSize="13sp"
                android:width="200sp" />

            <View
                android:id="@+idIncluir/barra4"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_below="@+idIncluir/cepEditView"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:background="#FF3300" >
            </View>

            <EditText
                android:id="@+idIncluir/nacionalidadeEditView"
                android:layout_width="wrap_content"
                android:layout_height="40sp"
                android:layout_below="@+idIncluir/barra4"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_marginTop="3sp"
                android:hint="@+string/nacionalidade"
                android:inputType="number"
                android:textSize="13sp"
                android:width="300sp" />

            <Spinner
                android:id="@+idIncluir/estadoCivilSpinnerView"
                android:layout_width="wrap_content"
                android:layout_height="40sp"
                android:layout_below="@+idIncluir/nacionalidadeEditView"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_marginTop="3sp"
                android:drawSelectorOnTop="true"
                android:entries="@+array/estado_civil_array"
                android:prompt="@+string/estado_civil"
                android:tag="@+tags/estado_civil_tag"
                android:textSize="13sp"
                android:width="300sp" />

            <EditText
                android:id="@+idIncluir/profissaoEditView"
                android:layout_width="wrap_content"
                android:layout_height="40sp"
                android:layout_below="@+idIncluir/estadoCivilSpinnerView"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_marginTop="3sp"
                android:hint="@+string/profissao"
                android:inputType="number"
                android:textSize="13sp"
                android:width="300sp" />

            <View
                android:id="@+idIncluir/barra5"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_below="@+idIncluir/profissaoEditView"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:background="#FF3300" >
            </View>

            <TextView
                android:id="@+idIncluir/nomeDosPaisTextView"
                android:layout_width="wrap_content"
                android:layout_height="25sp"
                android:layout_below="@+idIncluir/barra5"
                android:layout_marginLeft="15sp"
                android:text="@string/nome_dos_pais"
                android:textSize="18sp"
                tools:context=".CadastroClienteActivity" />

            <View
                android:id="@+idIncluir/barra6"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_below="@+idIncluir/nomeDosPaisTextView"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:background="#FF3300" >
            </View>

            <EditText
                android:id="@+idIncluir/maeEditView"
                android:layout_width="wrap_content"
                android:layout_height="40sp"
                android:layout_below="@+idIncluir/barra6"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_marginTop="3sp"
                android:hint="@+string/mae"
                android:inputType="number"
                android:textSize="13sp"
                android:width="300sp" />

            <EditText
                android:id="@+idIncluir/paiEditView"
                android:layout_width="wrap_content"
                android:layout_height="40sp"
                android:layout_below="@+idIncluir/maeEditView"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_marginTop="3sp"
                android:hint="@+string/pai"
                android:inputType="number"
                android:textSize="13sp"
                android:width="300sp" />

            <View
                android:id="@+idIncluir/barra7"
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_below="@+idIncluir/paiEditView"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:background="#FF3300" >
            </View>

            <EditText
                android:id="@+idIncluir/ctpsEditView"
                android:layout_width="wrap_content"
                android:layout_height="40sp"
                android:layout_below="@+idIncluir/barra7"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_marginTop="3sp"
                android:hint="@+string/ctps"
                android:inputType="number"
                android:textSize="13sp"
                android:width="300sp" />

            <EditText
                android:id="@+idIncluir/pisPasepEditView"
                android:layout_width="wrap_content"
                android:layout_height="40sp"
                android:layout_below="@+idIncluir/ctpsEditView"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_marginTop="3sp"
                android:hint="@+string/pis_pasep"
                android:inputType="number"
                android:textSize="13sp"
                android:width="300sp" />

            <EditText
                android:id="@+idIncluir/inscricaoEstadualEditView"
                android:layout_width="wrap_content"
                android:layout_height="40sp"
                android:layout_below="@+idIncluir/pisPasepEditView"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_marginTop="3sp"
                android:hint="@+string/inscricao_estadual"
                android:inputType="number"
                android:textSize="13sp"
                android:width="300sp" />
        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="#555555"
        android:orientation="horizontal" >

        <Button
            android:id="@+idIncluir/botaoSalvar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/salvar"
            android:textSize="20sp" />

        <Button
            android:id="@+idIncluir/botaoCancelar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/cancelar"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>